# crypto-trading-bot

./: .env.example  .gitignore  Makefile  gerenciamento_risco_original.py  hello.py  pyproject.toml  risk_management.py  script.ipynb  script_bollinger_bands.ipynb  script_macd.ipynb  script_rsi.ipynb  script_sma_ema.ipynb  script_sup_resist.ipynb  script_vwap.ipynb
scripts/tecnical_indicators/: script_bollinger_bands.ipynb  script_rsi.ipynb  script_sma_ema.ipynb
src/: binance_futures_trading_helper.py
src/adapters/exchanges/binance/: binance_futures_trading_adapter.py
src/adapters/exchanges/interfaces/: i_futures_trading_adapter.py
src/adapters/notification/interfaces/: i_notification_adapter.py
src/adapters/notification/messages/: future_trading_messages.py
src/adapters/notification/telegram/: telegram_adapter.py
src/configs/: logger_config.py
src/helpers/: indicators_helper.py
src/helpers/binance/: futures_trading_helper.py
src/strategies/: weapon_candle_strategy.py
