[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ccxt>=4.4.41",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.2",
    "schedule>=1.2.2",
    "ta>=0.11.0",
]
